New financial functionalities